# rustafarian-client

./: .gitignore  Cargo.toml  README.md  tarpaulin-report.html
.github/workflows/: rust.yml
src/: browser_client.rs  chat_client.rs  client.rs  lib.rs  message.rs  server.rs  topology.rs  utils.rs
src/assembler/: assembler.rs  disassembler.rs  mod.rs
src/chat_client/: mod.rs
src/client/: mod.rs
src/routing/: mod.rs
src/tests/: ack_test.rs  controller_test.rs  error_tests.rs  flood_req_test.rs  flooding.rs  flooding_test.rs  list_test.rs  mod.rs  nack_test.rs  register_test.rs  routing_test.rs  send_message.rs  send_message_test.rs  server_type_test.rs  test_channels.rs  test_running.rs  util.rs
src/tests/browser/: commands.rs  mod.rs  request_file_list.rs  request_media.rs  request_text.rs  server_type_test.rs
src/tests/chat/: ack_test.rs  controller_test.rs  error_tests.rs  flood_req_test.rs  flooding_test.rs  list_test.rs  mod.rs  nack_test.rs  register_test.rs  send_message_test.rs  server_type_test.rs  test_channels.rs  test_running.rs
