[package]
name = "rustafarian_client"
version = "0.1.0"
edition = "2021"

[dependencies]
wg_2024 = { git = "https://github.com/WGL-2024/WGL_repo_2024.git", features = ["serialize", "debug"] }
crossbeam="0.8"
crossbeam-channel="0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
rustafarian-project = { git = "https://github.com/Rustafarian-Unitn/rustafarian-project/", branch = "project-fair" }
rand = { version = "0.8" }

[[bin]]
name = "rustafarian_client"
path = "src/chat_client.rs"
