[package]
name = "rustafarian-client"
version = "0.2.0"
edition = "2021"

[dependencies]
wg_2024 = { git = "https://github.com/WGL-2024/WGL_repo_2024.git", features = ["serialize", "debug"] }
crossbeam="0.8"
crossbeam-channel="0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
rand = { version = "0.8" }
rustafarian-shared = { git = "https://github.com/Rustafarian-Unitn/rustafarian-shared" }

[[bin]]
name = "rustafarian_client"
path = "src/bin/chat_exec.rs"
